# Model_Learning

./: .gitignore  A.txt  CMakeLists.txt  G.txt  ML_Feedback.py  README.md  TrajectoryGenerartor.py  cartpole_dynamics.py  doxygen_webpage.html  koopmanOperatorCartPole.txt  learnForwardKinematics.py  learnForwardKinematics_noLength.py  learnForwardKinematics_sineCosineAsInputs.py  package.xml  results.ods  results_poster.xlsx  robot.py  robotIK.py  test.py  thesis_poster.pptx
HebiArmDemos/: Arm_Teach_Repeat_Demo.m  DetectGreenBall.py  DetectYellowBall.py  GrabGreenBall_v2.m  GrabYellowBall_v2.m  HEBI_Arm_Joystick_control_Compliance_Demo.m  HEBI_Arm_Joystick_control_Demo_V2.m  gripperOff.m  gripperOn.m
HebiArmDemos/Utilities/: HebiKinematicsSetup.m  HebiKinematicsSetup_v2.m  collisionStop.m  getCoordinates.m  gripperOff.m  gripperOn.m  teachRepeat.m
dynamics/gaussianProcesses/: gp_dynamics.py
kinematics/: robot.py
kinematics/gaussianProcesses/: gp_example_code.py  gp_fk.py
kinematics/koopman/: cartPole_data.txt  koopmanOperatorCartPole.txt
kinematics/neural/: 3D_learnFK_sineCosineAsInputs_RRRRR.py  Filter_Testing.py  ML_Feedback.py  TrajectoryEval.py  controller.py  dataStruct.py  kinematics.py  pubSub.py  test.py
koopman/: A.txt  G.txt  cartPole_data.txt  koopmanOperatorCartPole.txt
model/: checkpoint  checkpoint.ckpt.data-00000-of-00001  checkpoint.ckpt.index  events.out.tfevents.1517892232.puneet  planarRRR_4layers_64batchSize_256hiddenUnits_point001LR.ckpt.index
msg/: CommandML.msg  FeedbackML.msg
neural/: autoEncoders.py  learnForwardKinematics_lengthsAsPlaceholder.py
neural/model/: checkpoint  planarRRR_4layers_64batchSize_256hiddenUnits_point0001LR.ckpt.index
scripts/: ML_Feedback.py  TrajectoryGenerartor.py
src/: arm_controller.cpp  arm_dynamics.cpp  arm_dynamics.hpp  arm_kinematics.cpp  arm_kinematics.hpp  arm_openloop.cpp  command.cpp  generateTrajectory.cpp  model_learning_config
src/html/: annotated.html  arm__controller_8cpp.html  arm__controller_8cpp__incl.map  arm__controller_8cpp__incl.md5  arm__dynamics_8cpp.html  arm__dynamics_8cpp__incl.map  arm__dynamics_8cpp__incl.md5  arm__dynamics_8hpp.html  arm__dynamics_8hpp__dep__incl.map  arm__dynamics_8hpp__dep__incl.md5  arm__dynamics_8hpp__incl.map  arm__dynamics_8hpp__incl.md5  arm__dynamics_8hpp_source.html  arm__kinematics_8cpp.html  arm__kinematics_8hpp.html  arm__kinematics_8hpp__dep__incl.map  arm__kinematics_8hpp__dep__incl.md5  arm__kinematics_8hpp__incl.map  arm__kinematics_8hpp__incl.md5  arm__kinematics_8hpp_source.html  arm__openloop_8cpp.html  arm__openloop_8cpp__incl.map  arm__openloop_8cpp__incl.md5  classSideWind-members.html  classSideWind.html  classarmcontroller-members.html  classarmcontroller.html  classes.html  classhebiSub-members.html  classhebiSub.html  classhebi_1_1Command-members.html  classhebi_1_1Command.html  classhebi_1_1Command_1_1Actuator-members.html  classhebi_1_1Command_1_1Actuator.html  classhebi_1_1Command_1_1BoolField-members.html  classhebi_1_1Command_1_1BoolField.html  classhebi_1_1Command_1_1EnumField-members.html  classhebi_1_1Command_1_1EnumField.html  classhebi_1_1Command_1_1FlagField-members.html  classhebi_1_1Command_1_1FlagField.html  (+480 more)
src/latex/: annotated.tex  arm__controller_8cpp.tex  arm__controller_8cpp__incl.md5  arm__dynamics_8cpp.tex  arm__dynamics_8cpp__incl.md5  arm__dynamics_8hpp.tex  arm__dynamics_8hpp__dep__incl.md5  arm__dynamics_8hpp__incl.md5  arm__kinematics_8cpp.tex  arm__kinematics_8hpp.tex  arm__kinematics_8hpp__dep__incl.md5  arm__kinematics_8hpp__incl.md5  arm__openloop_8cpp.tex  arm__openloop_8cpp__incl.md5  classSideWind.tex  classarmcontroller.tex  classhebiSub.tex  classhebi_1_1Command.tex  classhebi_1_1Command_1_1Actuator.tex  classhebi_1_1Command_1_1BoolField.tex  classhebi_1_1Command_1_1EnumField.tex  classhebi_1_1Command_1_1FlagField.tex  classhebi_1_1Command_1_1FloatField.tex  classhebi_1_1Command_1_1HighResAngleField.tex  classhebi_1_1Command_1_1LedField.tex  classhebi_1_1Command_1_1NumberedFloatField.tex  classhebi_1_1Command_1_1Settings.tex  classhebi_1_1Command_1_1Settings_1_1Actuator.tex  classhebi_1_1Command_1_1Settings_1_1Actuator_1_1PositionGains.tex  classhebi_1_1Command_1_1Settings_1_1Actuator_1_1TorqueGains.tex  classhebi_1_1Command_1_1Settings_1_1Actuator_1_1VelocityGains.tex  classhebi_1_1Command_1_1StringField.tex  classhebi_1_1Feedback.tex  classhebi_1_1Feedback_1_1Actuator.tex  classhebi_1_1Feedback_1_1FloatField.tex  classhebi_1_1Feedback_1_1HighResAngleField.tex  classhebi_1_1Feedback_1_1Imu.tex  classhebi_1_1Feedback_1_1LedField.tex  classhebi_1_1Feedback_1_1NumberedFloatField.tex  classhebi_1_1Feedback_1_1Vector3fField.tex  (+159 more)
train/: events.out.tfevents.1518038315.puneet
train_log/2018-02-07_20-13-46/: events.out.tfevents.1518052426.puneet
train_log/2018-02-07_20-16-25/: events.out.tfevents.1518052585.puneet
train_log/2018-02-07_20-35-27/: events.out.tfevents.1518053727.puneet
train_log/2018-02-07_20-37-25/: events.out.tfevents.1518053845.puneet
train_log/2018-02-07_20-38-16/: events.out.tfevents.1518053896.puneet
train_log/2018-02-07_20-39-48/: events.out.tfevents.1518053988.puneet
train_log/2R_4layers_32batchSize_128hiddenUnits_point001LR/: events.out.tfevents.1518054617.puneet
train_log/2R_noLengthsAsPlaceHolder_4layers_32batchSize_128hiddenUnits_point0005LR/: events.out.tfevents.1518561322.puneet
train_log/3R_5layers_64batchSize_128hiddenUnits_point001LR/: events.out.tfevents.1518142573.puneet
train_log/3R_5layers_64batchSize_256hiddenUnits_point001LR/: events.out.tfevents.1518142695.puneet
train_log/planarRRR_4layers_64batchSize_256hiddenUnits_point0001LR/: events.out.tfevents.1519065197.puneet
train_log/planarRRR_4layers_64batchSize_256hiddenUnits_point001LR/: events.out.tfevents.1519064736.puneet
train_log/planar_RRR_noLengthsAsPlaceHolder_4layers_64batchSize_256hiddenUnits_point0001LR/: events.out.tfevents.1518565487.puneet
train_log/planar_RRR_noLengthsAsPlaceHolder_4layers_64batchSize_256hiddenUnits_point0003LR/: events.out.tfevents.1518565162.puneet
(+199 files in other folders)
