<package format="2">
  <name>model_learning</name>
  <version>1.0.0</version>

  <maintainer email="ky.a.woodard@gmail.com">Ky Woodard</maintainer>
  <author>Ky Woodard</author>

  <description>
    model learning
  </description>

  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>cmake_modules</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
